Add text view for number of cheat attempts remaining

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -40,4 +40,10 @@
         android:drawablePadding="4dp"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cheat_attempts_remaining"
+        />
+
 </LinearLayout>
